--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,7 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Irish Grover', cursive;
   line-height: 1.5;
   font-weight: 400;
+
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -66,3 +69,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Irish Grover', cursive;
+  font-weight: 400;
+  line-height: 1.5;
+  color: rgba(255, 255, 255, 0.87);
+}
+
