--- a/src/client/components/mainPage/titlePage.css
+++ b/src/client/components/mainPage/titlePage.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("../../../../public/background_home\ 1.png");
+    background-image: url("/public/background.png");
     background-size: cover; 
     background-position: center;
 }
