Ajout de la page d'inventaire

--- a/src/client/components/mainPage/titlePage.css
+++ b/src/client/components/mainPage/titlePage.css
@@ -1,8 +1,8 @@
-html {
+/* html {
     background-image: url("/public/background.png");
     background-size: cover; 
     background-position: center;
-}
+} */
 
 .start-button {
     background-color: dark;
