--- a/src/client/components/inventoryPage/inventoryPage.css
+++ b/src/client/components/inventoryPage/inventoryPage.css
@@ -1,13 +1,45 @@
 .inventory {
-    background-color: "#BDAE97";
+    background-color: #BDAE97;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
 }
 
 .inventory-slot {
     opacity: 0.45;
     background-color: "#D9D9D9";
+    height: 5rem;
+    width: 5rem;
+    margin: 0 0.2em;
+    border-radius: 20%;
 }
 
 .inventory-bag {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     opacity: 0.40;
-    background-color: "#D9D9D9";
+    background-color: #978262;
+    padding: 1em;
+    border-radius: 20px;
+}
+
+.inventory-left .inventory-right {
+    display: flex;
+    flex: 1; 
+}
+
+.inventory-right {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-bag {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
 }
