--- a/src/client/components/mainPage/titlePage.css
+++ b/src/client/components/mainPage/titlePage.css
@@ -1,11 +1,23 @@
-/* html {
+.title-page {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
     background-image: url("/public/background.png");
     background-size: cover; 
     background-position: center;
-} */
+}
 
 .start-button {
-    background-color: dark;
+    width: 10rem;
+    height: 3rem;
+    background-color: white;
     opacity: 0.8;
-    color: black;
+}
+
+h1 {
+    font-size: 4rem;
+    color: white;
 }
