--- a/src/client/components/sideBar/sideBar.css
+++ b/src/client/components/sideBar/sideBar.css
@@ -2,7 +2,8 @@
     width: 3%;
     height: 50%;
     background-color: black;
-    position: fixed;
+    position: absolute;
     left: 0;
+    top: 25%;
     border-radius: 0 20px 20px 0;
 }
