--- a/src/client/components/sideBar/sideBar.css
+++ b/src/client/components/sideBar/sideBar.css
@@ -1,7 +1,7 @@
 .side-bar{
     width: 3%;
     height: 50%;
-    background-color: black;
+    background-color: #BDAE97;
     position: absolute;
     left: 0;
     top: 25%;
