--- a/src/client/components/dicePage/dicePage.css
+++ b/src/client/components/dicePage/dicePage.css
@@ -20,6 +20,7 @@
 }
 
 .rollDice {
+    font-family: 'Irish Grover', cursive;
     background-color: rgba(0, 0, 0, 0.793);
     border: solid 1px white;
     color: white;
