--- a/src/client/components/blankPage/blankPage.css
+++ b/src/client/components/blankPage/blankPage.css
@@ -1,1 +1,30 @@
+.blank-page{
+    padding: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1.5em;
+}
 
+button{ 
+    font-family: 'Irish Grover', cursive;
+    background-color: rgba(0, 0, 0, 0.793);
+    border: solid 1px white;
+    color: white;
+    width: max-content;
+    padding: 0.5em 0.8em;
+    font-size: 1.4em;
+    border-radius: 20px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: black;
+}
+
+.libelle{
+    padding: 2em;
+    font-size: 2.5rem;
+}
