--- a/src/client/components/inventoryPage/inventoryPage.css
+++ b/src/client/components/inventoryPage/inventoryPage.css
@@ -1,9 +1,13 @@
 .inventory {
     background-color: #BDAE97;
+    top:0;
+    position: absolute;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
+    padding: 3em;
+    height: 100vh;
 }
 
 .inventory-slot {
