--- a/src/client/components/enigmePage/enigme.css
+++ b/src/client/components/enigmePage/enigme.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
 }
 .form-answer{
     display: flex;
@@ -24,4 +24,7 @@
   font-size: 16px;
   margin-left: 30px;
   cursor: pointer;
+}
+.compteur {
+  margin-bottom: 10px ;
 }
