--- a/src/client/components/formElement/formElement.css
+++ b/src/client/components/formElement/formElement.css
@@ -1,12 +1,21 @@
-label {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
 .form-group {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 1rem;
+}
+
+label {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 4px;
 }
