--- a/src/client/components/blankPage/blankPage.css
+++ b/src/client/components/blankPage/blankPage.css
@@ -1,3 +1,12 @@
+.background {
+    background-color: black;
+    background-image: url("/public/images/background-sections.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+}
+
 .blank-page{
     padding: 3em;
     display: flex;
@@ -26,5 +35,5 @@ button:hover {
 
 .libelle{
     padding: 2em;
-    font-size: 2.5rem;
+    font-size: calc(1rem + 1.25vw)
 }
