--- a/src/client/components/inventoryPage/inventoryPage.css
+++ b/src/client/components/inventoryPage/inventoryPage.css
@@ -6,7 +6,7 @@
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    padding: 3em;
+    padding: 0 3em;
     height: 100vh;
 }
 
