--- a/src/client/components/mainPage/titlePage.css
+++ b/src/client/components/mainPage/titlePage.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-image: url("/public/background.png");
+    background-image: url("/public/images/background-title-page.png");
     background-size: cover; 
     background-position: center;
 }
