--- a/src/client/components/sideBar/sideBar.css
+++ b/src/client/components/sideBar/sideBar.css
@@ -5,5 +5,12 @@
     position: absolute;
     left: 0;
     top: 25%;
+    z-index: 10;
     border-radius: 0 20px 20px 0;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.side-bar:hover {
+    background-color: #92846f;
 }
