--- a/src/client/components/enigmePage/enigme.css
+++ b/src/client/components/enigmePage/enigme.css
@@ -1,30 +1,48 @@
-.enigme{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
+.enigme {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.form-answer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-    
+
+.form-group {
+  padding: 0;
 }
+
+.input-answer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+#reponse {
+  padding: 0.7em 1em;
+  border-radius: 15px;
+  background-color: rgba(0, 0, 0, 0.354);
+  border: 1px solid white;
+  font-family: 'Irish Grover', cursive;
+  font-size: 1em;
+  color: white;
+}
+
 .button-submit {
-  background-color: #4CAF50;
+  background-color: #4d994f;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 0.5em 1.5em;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin-left: 30px;
+  font-size: 1.2em;
   cursor: pointer;
 }
+
+.button-submit:hover {
+  background-color: #3d8a3f;
+}
+
 .compteur {
-  margin-bottom: 10px ;
+  font-size: 1.2em;
 }
