--- a/src/client/components/slideIn/SlideIn.css
+++ b/src/client/components/slideIn/SlideIn.css
@@ -2,5 +2,12 @@
     margin-left: -3000px;
     opacity: 0;
     transition-property: margin-left, opacityleft;
-    transition-duration: 2s;
+    transition-duration: 3s;
+  }
+
+.slide-out {
+    margin-left: 0px;
+    opacity: 1;
+    transition-property: margin-left, opacityleft;
+    transition-duration: 3s;
   }
