--- a/src/client/components/inventoryPage/inventoryPage.css
+++ b/src/client/components/inventoryPage/inventoryPage.css
@@ -11,20 +11,33 @@
     z-index: 6;
 }
 
+button {
+    font-family: 'Irish Grover', cursive;
+    background-color: white;
+    border: solid 1px white;
+    color: white;
+    width: max-content;
+    padding: 0.5em 0.8em;
+    font-size: 1.4em;
+    border-radius: 20px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+}
+
 .inventory-slot {
-    opacity: 0.45;
+    opacity: 1;
     background-color: "#D9D9D9";
     height: 5rem;
     width: 5rem;
     margin: 0 0.2em;
     border-radius: 20%;
+    cursor: pointer;
 }
 
 .inventory-bag {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    opacity: 0.40;
     background-color: #978262;
     padding: 1em;
     min-width: 20em;
@@ -52,11 +65,10 @@
 
 .character-container {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     background-color: #978262;
-    opacity: 0.40;
     padding: 1em;
     border-radius: 20px;
 }
