--- a/src/client/components/inventoryPage/statBar/statBar.css
+++ b/src/client/components/inventoryPage/statBar/statBar.css
@@ -1,13 +1,30 @@
 .stat-container {
     display: flex;
-    justify-content: center;
     align-items: center;
+    width: 100%;
+}
+
+.stat {
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 5px;
+  width: 100%;
+  border-radius: 8px;
+  color: white;
+}
+
+.stat-bar-value {
+  margin-left: 10px;
+}
+
+.statName {
+  width: 270px;
+  text-align: left;
 }
 
 .stat-bar {
   height: 1em;
-  border-radius: 20px;
-  margin-left: 1em;
+  border-radius: 5px;
 }
 
 .tooltip {
