--- a/src/client/components/inventoryPage/inventoryPage.css
+++ b/src/client/components/inventoryPage/inventoryPage.css
@@ -1,5 +1,5 @@
 .inventory {
-    background-color: #BDAE97;
+    background: linear-gradient(#656e7d, #BDAE97);
     top:0;
     position: absolute;
     display: flex;
@@ -10,6 +10,53 @@
     height: 90vh;
     z-index: 6;
     gap: 20px;
+}
+
+.tuto {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 11;
+    background: rgba(0, 0, 0, 0.379);
+}
+
+.tooltip-tuto {
+    display: none;
+    position: absolute;
+    top: 10px;
+    left: -240px;
+    background: rgba(0, 0, 0, 0.654);
+    border: 2px solid white;
+    color: white;
+    width: 215px;
+    padding: 10px;
+    border-radius: 20px;
+    z-index: 12;
+    font-size: 23px;
+}
+
+.arrowTooltip {
+    display: none;
+    position: absolute;
+    top: -85px;
+    left: 40px;
+    color: white;
+    z-index: 12;
+    font-size: 80px;
+    animation: slideArrow 2s infinite;
+    transform: rotate(90deg);
+}
+
+.animationTuto {
+    z-index: 13;
+    animation: twinkle 3s infinite;
+}
+
+.main-bag {
+    position: relative;
 }
 
 button {
@@ -42,7 +89,6 @@ button {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #978262;
     padding: 1em;
     border-radius: 20px;
     gap: 10px;
@@ -80,8 +126,9 @@ button {
     flex-direction: column;
     border-radius: 20px;
     padding: 20px;
-    background-color: #978262;
+    background-color: #8c6e3e;
     box-shadow: 0 0 20px #00000096;
+    width: 520px;
 }
 
 .player-stats-inventory {
@@ -97,14 +144,10 @@ button {
 .player-stats-inventory > div {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    background-color: #978262;
+    align-items: center;
+    background-color: #8c6e3e;
     border-radius: 20px;
     box-shadow: 0 0 20px #00000096;
-}
-
-.player-stats-inventory h1 {
-    margin: 30px 0 0 30px;
 }
 
 .character-container {
@@ -119,3 +162,29 @@ button {
     gap: 15px;
     font-size: 25px;
 }
+
+@keyframes twinkle {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+        box-shadow: 0 0 20px white;
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes slideArrow {
+    0%,
+    100% {
+      transform: translateY(0, 0), rotate(90deg);
+    }
+  
+    50% {
+      transform: translateY(10px, 0), rotate(90deg);
+    }
+  }
