--- a/src/client/components/inventoryPage/inventoryPage.css
+++ b/src/client/components/inventoryPage/inventoryPage.css
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100%;
     z-index: 11;
-    background: rgba(0, 0, 0, 0.379);
+    background: rgba(0, 0, 0, 0.69);
 }
 
 .tooltip-tuto {
@@ -28,7 +28,7 @@
     position: absolute;
     top: 10px;
     left: -240px;
-    background: rgba(0, 0, 0, 0.654);
+    background: rgba(98, 98, 98, 0.4);
     border: 2px solid white;
     color: white;
     width: 215px;
@@ -82,7 +82,13 @@ button {
     height: 5rem;
     width: 5rem;
     border-radius: 20%;
+    border: 1px solid white;
     cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.inventory-slot:hover {
+    box-shadow: 0 0 10px black;
 }
 
 .inventory-bag {
@@ -126,7 +132,7 @@ button {
     flex-direction: column;
     border-radius: 20px;
     padding: 20px;
-    background-color: #8c6e3e;
+    background-color: #685029;
     box-shadow: 0 0 20px #00000096;
     width: 520px;
 }
@@ -145,7 +151,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #8c6e3e;
+    background-color: #685029;
     border-radius: 20px;
     box-shadow: 0 0 20px #00000096;
 }
