--- a/src/client/components/mainPage/titlePage.css
+++ b/src/client/components/mainPage/titlePage.css
@@ -1,17 +1,33 @@
 .title-page {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 30px;
     width: 100%;
     height: 100%;
     background-image: url("/public/images/background-title-page.png");
     background-size: cover; 
     background-position: center;
 }
+
 h1 {
     font-size: 4rem;
     color: white;
+}
+
+.buttons-title {
+    display: flex;
+    gap: 20px;
+}
+
+.buttons-title button {
+    width: 400px;
+}
+
+.buttons-title button.active {
+    background-color: #D9D9D9;
+    color: black;
 }
 
 .container-title-page {
@@ -22,7 +38,10 @@ h1 {
     gap: 20px;
 }
 
-.player_name_input {
+.player_name_input_create, 
+.player_mdp_input_create,
+.player_name_input_loading, 
+.player_mdp_input_loading {
     padding: 0.7em 1em;
     border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.354);
@@ -30,9 +49,16 @@ h1 {
     font-family: 'Irish Grover', cursive;
     font-size: 1em;
     color: white;
+    margin: 0;
+    width: 300px;
 }
 
-.already-existed {
+.player_name_input::placeholder, 
+.player_mdp_input::placeholder {
+    color: white;
+}
+
+.error-message {
     font-size: 1.2em;
     background-color: #ff000061;
     color: rgb(253, 149, 149);
@@ -40,4 +66,6 @@ h1 {
     transition: all 0.2s ease-in-out;
     padding: 0.5em 1em;
     border-radius: 20px;
+    width: max-content;
+    text-align: center;
 }
