Update error message

--- a/src/client/components/dicePage/dicePage.css
+++ b/src/client/components/dicePage/dicePage.css
@@ -61,8 +61,8 @@
 }
 
 .answerDice {
-    border: solid 1px white;
-    background-color: rgba(0, 0, 0, 0.793);
+    background-color: rgba(0, 0, 0, 0.576);
+    box-shadow: 0 0 20px white;
     border-radius: 20px;
     padding: 20px;
     color: white;
