--- a/src/client/components/enigmePage/enigme.css
+++ b/src/client/components/enigmePage/enigme.css
@@ -45,4 +45,13 @@
 
 .compteur {
   font-size: 1.2em;
+  background-color: rgba(0, 0, 0, 0.8);
+  border: solid 1px white;
+  border-radius: 20px;
+  color: white;
+  padding: 12px 24px;
+}
+
+.warning {
+  color: #ff4949;
 }
